# super-worker

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.sh
super_worker/: __init__.py  __main__.py  _textual_patches.py  app.py  cli.py  config.py  constants.py  models.py  screens.py
super_worker/services/: state.py  tmux.py  worktree.py
super_worker/widgets/: sidebar.py  terminal_pane.py
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_models.py  test_sidebar.py  test_state.py  test_tmux.py  test_tmux_integration.py  test_worktree.py
